# midix_synth

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs
src/soundfont/: mod.rs  sample_header.rs
src/soundfont/generator/: mod.rs
src/soundfont/instrument/: info.rs
src/soundfont/preset/: info.rs
src/soundfont/zone/: info.rs
src/synthesizer/: mod.rs  settings.rs
src/tests/: mod.rs  utils.rs
