[package]
name = "midix_synth"
version = "0.1.0-alpha.0"
edition = "2024"
authors = ["dsgallups <dsgallups@protonmail.com>"]
description = "SoundFont compatible MIDI synthesizer for midix"
repository = "https://github.com/dsgallups/midix"
documentation = "https://docs.rs/midix_synth"
readme = "README.md"
keywords = ["midi", "audio", "synthesizer"]
categories = ["multimedia::audio", "multimedia"]
license = "MIT OR Apache-2.0"


[features]
tracing = ["dep:tracing"]

[dependencies]
midix = { version = "4.0.0-alpha" }
bevy_platform = { version = "0.17.0-rc" }
tracing = {version = "0.1", optional = true }

[dev-dependencies]
rustysynth = "1.3.6"
